# kestrel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SIGUIENTE.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: test.yml
docs/: architecture.md  prompts-reference.md  public-usage.md  state-schema.md  tools-reference.md  v03-scripts-triage.md
docs/v03-phases-archive/: p3-delegate-pentest.md  p5-writeup.md
docs/v03-phases-archive/shared/: api-helpers.md  intel-prompt.md  state-schema.md
docs/v04-phases-archive/: p0-welcome.md  p1-target-pick.md  p1.5-intel-recon.md  p2-engagement-setup.md  p4-flag-submit.md  p6-cleanup.md
docs/v04-phases-archive/shared/: debrief-template.md  learning-prompts.md
examples/: claude-code-mcp.json  claude-desktop-mcp.json
scripts/: blind_fingerprint.py  crack_status.py  gen_tools_reference.py  heartbeat.py  kali-setup-msfrpc.sh  parallel_explorer.py  resume_validator.py  resume_validator.sh  run_agent.ps1  state_inspector.py  stuck_detector.py  tool-timer.sh  wordlist_strategy.py
skill/: DESIGN.md  SKILL.md
src/kestrel/: __init__.py  cli.py
src/kestrel/agent/: __init__.py  bridge.py  loop.py  metrics.py
src/kestrel/core/: __init__.py  crack.py  fingerprint.py  heartbeat.py  parallel.py  resume_validator.py  state_inspector.py  stuck.py  timer.py  wordlist.py
src/kestrel/integrations/: __init__.py
src/kestrel/mcp/: __init__.py  context.py  registry.py  server.py
src/kestrel/mcp/prompts/: __init__.py  debrief.py  hint.py  kickoff.py  phases.py  synthesis.py
src/kestrel/mcp/resources/: __init__.py  kb.py  session.py  state.py
src/kestrel/mcp/tools/: __init__.py  ad.py  creds.py  exploit.py  flag.py  heartbeat.py  hitl.py  htb.py  intel.py  kali.py  narrate.py  phase.py  (+7 more)
src/kestrel/state/: __init__.py  schema.py  store.py
src/kestrel/transport/: __init__.py  base.py  kali_proxy.py  msf.py  ssh.py  winrm.py
tests/: test_agent.py  test_attack_plan.py  test_cli.py  test_crack_status.py  test_fingerprint.py  test_fingerprint_golden.py  test_heartbeat.py  test_mcp_server.py  test_parallel_explorer.py  test_prompts.py  test_resources.py  test_state_inspector.py  test_state_store.py  test_stuck_detector.py  test_timer.py  test_tool_timer.py  test_tools_creds_exploit_post_ad.py  test_tools_flag_writeup_hitl_heartbeat.py  test_tools_htb.py  test_tools_intel.py  test_tools_narrate.py  test_tools_phase.py  test_tools_recon.py  test_tools_session.py  test_tools_state.py  test_tools_vpn_kali.py  test_tools_vuln.py  test_transport.py  test_wordlist_strategy.py
tests/fixtures/golden/: README.md  cctv.json  garfield.json  kobold.json  monitorsfour.json  silentium.json  wingdata.json
tests/fixtures/state/: last-cycle-with-history.json
