[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kestrel-htb"
version = "0.4.0-dev"
description = "HackTheBox engagement orchestrator — MCP server for AI-driven VM owning"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "CobaltoSec", email = "nicolas@cobalto-sec.tech" },
]
keywords = ["hackthebox", "htb", "mcp", "pentesting", "ai", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "typer>=0.12",
    "paramiko>=3.4",
    "pypsrp>=0.8",
    "pymetasploit3>=1.0",
    "filelock>=3.13",
    "Jinja2>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
kb = ["psycopg2-binary>=2.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-paramiko",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/CobaltoSec/kestrel"
Documentation = "https://github.com/CobaltoSec/kestrel/blob/main/docs/architecture.md"
Issues = "https://github.com/CobaltoSec/kestrel/issues"
Repository = "https://github.com/CobaltoSec/kestrel"
Changelog = "https://github.com/CobaltoSec/kestrel/blob/main/CHANGELOG.md"

[project.scripts]
kestrel = "kestrel.cli:app"
kestrel-mcp = "kestrel.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kestrel*"]

[tool.setuptools.package-data]
kestrel = ["mcp/prompts/templates/*.j2", "integrations/data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real HTB target (KESTREL_E2E=1)",
    "kali: tests requiring Kali VM up (KESTREL_KALI=1)",
    "htb: tests requiring HTB API token (KESTREL_HTB=1)",
    "msf: tests requiring msfrpcd up on Kali (KESTREL_MSF=1)",
    "posix_only: tests that only run on POSIX systems (skipif win32)",
    "windows_skip: skip on Windows due to shell quoting issues",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.mypy]
python_version = "3.10"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = true
